welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:79: error: Unmatched closing brace '}' ignored here
} 
^FlowerCase:81: error: eof expected but '}' found.
}
^